# simple-semantics

./: .gitignore  Cargo.toml  README.md  simple-semantics-slides.tex  simple-semantics.bcf-SAVE-ERROR  simple-semantics.bib  simple-semantics.tex  toy.py
.github/workflows/: rust.yml
benches/: types.rs
src/: lambda.rs  language.rs  lib.rs  ops.rs  parser.rs  scenario.rs  utils.rs
src/lambda/: types.rs
src/language/: enumerator.rs  lambda.rs  lambda_implementation.rs  mutations.rs  parser.rs  serializations.rs
src/language/lambda_implementation/: mutations.rs
src/language/mutations/: context.rs  samplers.rs  unbuilt.rs
src/scenario/: utilities.rs
tests/: load_and_execute.rs
tests/resources/: men.scenario  testfile.scenario
