[package]
name = "simple-semantics"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = { version = "0.8.11", features = [
  "compile-time-rng",
  "std",
], default-features = false }
chumsky = { version = "0.10.1", features = ["pratt"] }
rand = { version = "0.9.1", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"

[dev-dependencies]
anyhow = "1.0.97"
rand_chacha = "0.9.0"
divan = "0.1.21"

[features]
default = ["sampling"]
sampling = ["dep:rand"]

[[bench]]
name = "types"
harness = false
