[package]
name = "simple-semantics"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = { version = "0.8.12", features = [
  "compile-time-rng",
  "std",
], default-features = false }
chumsky = { version = "0.11.2", features = ["pratt"] }
itertools = "0.14.0"
rand = { version = "0.9.2", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"

[dev-dependencies]
anyhow = "1.0.97"
rand_chacha = "0.9.0"
divan = "0.1.21"

[features]
default = ["sampling"]
sampling = ["dep:rand"]

[[bench]]
name = "types"
harness = false
